--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,13 @@
     "test:watch": "npm run test -- --watch"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-paginate": "^8.1.3",
+    "react-router-dom": "^6.3.0",
+    "recoil": "^0.7.2"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.4",
