--- a/client/.eslintrc.yml
+++ b/client/.eslintrc.yml
@@ -40,3 +40,7 @@ rules:
   # デフォルトエクスポートをエラーにする
   import/prefer-default-export: off
   import/no-default-export: error
+  react/function-component-definition:
+    - 2
+    - namedComponents: 'arrow-function'
+      unnamedComponents: 'arrow-function'
